deployment/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: message-fun
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-bus-fun-api
  namespace: message-fun
  labels:
    app: message-bus-fun-api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: message-bus-fun-api
  template:
    metadata:
      labels:
        app: message-bus-fun-api
        service: message-bus-fun-api
    spec:
      containers:
        - name: message-bus-fun-api
          image: pqsar/message-bus-fun-api
          imagePullPolicy: IfNotPresent # necesario para pruebas con el repo LOCAL
          ports:  
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config-api-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: config-api-volume
          configMap:
            name: message-bus-fun-api-config
            items:
              - key: appsettings.json
                path: appsettings.json
---
apiVersion: v1
kind: Service
metadata:
  name: message-bus-fun-api
  namespace: message-fun
  labels:
    app: message-bus-fun-api
spec:
  type: ClusterIP
  selector:
    app: message-bus-fun-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-fun-ingress
  namespace: message-fun
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "localhost"
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: message-bus-fun-api
              port:
                number: 80
        - path: /swagger
          pathType: Prefix
          backend:
            service:
              name: message-bus-fun-api
              port:
                number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-bus-fun-worker
  namespace: message-fun
  labels:
    app: message-bus-fun-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      service: message-bus-fun-worker
  template:
    metadata:
      labels:
        app: message-bus-fun-worker
        service: message-bus-fun-worker
    spec:
      containers:
        - name: message-bus-fun-worker
          image: pqsar/message-bus-fun-worker
          imagePullPolicy: IfNotPresent # necesario para pruebas con el repo LOCAL
          ports:  
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config-api-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: config-api-volume
          configMap:
            name: message-bus-fun-worker-config
            items:
              - key: appsettings.json
                path: appsettings.json
